--- a/rfidQbe/src/app/home/home.page.html
+++ b/rfidQbe/src/app/home/home.page.html
@@ -5,27 +5,37 @@
     </ion-title>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-item lines='none' *ngIf='results.length>0'>
-      <ion-button size='small' ion-button small (click)='makeExcel()' style="background:green;width:30px;">
-        <img src="../../assets/icon/excel.png" style="height:100%;max-width:30px;">
-      </ion-button>
-      <ion-icon src='../../assets/icon/excel.png'></ion-icon>
-      <!-- <ion-button *ngIf='formGroup.valid' size='small' (click)='clearForm()'>Clear Form</ion-button> -->
-      <ion-button size='small' (click)='showPrevious()' [disabled]='index+1<=1'>
-        <ion-icon name="arrow-dropleft"></ion-icon>
-      </ion-button>
-      <span>{{index+1}} of {{results.length}} </span>
-      <ion-button size='small' (click)='showNext()' [disabled]='index+1>=results.length'>
-        <ion-icon name="arrow-dropright"></ion-icon>
-      </ion-button>
+    <ion-row>
+      <ion-col offset-md='3' offset-lg='3' offset-xl='3'>
 
-    </ion-item>
+        <ion-item lines='none'>
+          <ion-icon *ngIf='formGroup.valid || results.length>0 || lessThan!=="" || moreThan!==""'
+            style='width:28px;height:28px;margin-right:5px;' src='../../assets/icon/eye.svg'
+            (click)='showQuerySummary()'></ion-icon>
+
+          <ion-button *ngIf='results.length>0' size='small' ion-button small (click)='makeExcel()'
+            style="background:green;width:30px;">
+            <img src="../../assets/icon/excel.png" style="height:100%;max-width:30px;">
+          </ion-button>
+          <ion-icon *ngIf='results.length>0' src='../../assets/icon/excel.png'></ion-icon>
+          <!-- <ion-button *ngIf='formGroup.valid' size='small' (click)='clearForm()'>Clear Form</ion-button> -->
+          <ion-button *ngIf='results.length>0' size='small' (click)='showPrevious()' [disabled]='index+1<=1'>
+            <ion-icon name="arrow-dropleft"></ion-icon>
+          </ion-button>
+          <span *ngIf='results.length>0'>{{index+1}} of {{results.length}} </span>
+          <ion-button *ngIf='results.length>0' size='small' (click)='showNext()' [disabled]='index+1>=results.length'>
+            <ion-icon name="arrow-dropright"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
   </ion-toolbar>
 
 
 </ion-header>
 
 <ion-content>
+
   <!--   <ion-item>
     <ion-label>Port</ion-label>
     <ionic-selectable
@@ -43,202 +53,158 @@
   </ion-item>
  -->
 
-
-  <!-- <ion-alert class="sc-ion-alert-md-h sc-ion-alert-md-s hydrated" id="ion-overlay-1" role="dialog" aria-modal="true"
-    style="z-index: 20001;">
-    <ion-backdrop class="sc-ion-alert-md hydrated" tabindex="-1" style="opacity: 0.32;"></ion-backdrop>
-    <div class="alert-wrapper sc-ion-alert-md" style="opacity: 1; transform: scale(1);">
-      <div class="alert-head sc-ion-alert-md">
-        <h2 id="alert-1-hdr" class="alert-title sc-ion-alert-md">Owner</h2>
-      </div>
-      <div id="alert-1-msg" class="alert-message sc-ion-alert-md"></div>
-      <div class="alert-radio-group sc-ion-alert-md" role="radiogroup" aria-labelledby="alert-1-hdr"><button
-          type="button" aria-checked="false" id="alert-input-1-0" tabindex="0"
-          class="alert-radio-button alert-tappable alert-radio ion-focusable sc-ion-alert-md" role="radio">
-          <div class="alert-button-inner sc-ion-alert-md">
-            <div class="alert-radio-icon sc-ion-alert-md">
-              <div class="alert-radio-inner sc-ion-alert-md"></div>
-            </div>
-            <div class="alert-radio-label sc-ion-alert-md">ECOR</div>
-          </div>
-        </button><button type="button" aria-checked="false" id="alert-input-1-1" tabindex="0"
-          class="alert-radio-button alert-tappable alert-radio ion-focusable sc-ion-alert-md" role="radio">
-          <div class="alert-button-inner sc-ion-alert-md">
-            <div class="alert-radio-icon sc-ion-alert-md">
-              <div class="alert-radio-inner sc-ion-alert-md"></div>
-            </div>
-            <div class="alert-radio-label sc-ion-alert-md">ECR</div>
-          </div>
-        </button><button type="button" aria-checked="false" id="alert-input-1-2" tabindex="0"
-          class="alert-radio-button alert-tappable alert-radio ion-focusable sc-ion-alert-md" role="radio">
-          <div class="alert-button-inner sc-ion-alert-md">
-            <div class="alert-radio-icon sc-ion-alert-md">
-              <div class="alert-radio-inner sc-ion-alert-md"></div>
-            </div>
-            <div class="alert-radio-label sc-ion-alert-md">SCR</div>
-          </div>
-        </button><button type="button" aria-checked="false" id="alert-input-1-3" tabindex="0"
-          class="alert-radio-button alert-tappable alert-radio ion-focusable sc-ion-alert-md" role="radio">
-          <div class="alert-button-inner sc-ion-alert-md">
-            <div class="alert-radio-icon sc-ion-alert-md">
-              <div class="alert-radio-inner sc-ion-alert-md"></div>
-            </div>
-            <div class="alert-radio-label sc-ion-alert-md">SR</div>
-          </div>
-        </button></div>
-      <div class="alert-button-group sc-ion-alert-md"><button type="button"
-          class="alert-button ion-focusable ion-activatable sc-ion-alert-md" tabindex="0"><span
-            class="alert-button-inner sc-ion-alert-md">Ok</span>
-          <ion-ripple-effect class="sc-ion-alert-md hydrated" role="presentation"></ion-ripple-effect>
-        </button><button type="button" class="alert-button ion-focusable ion-activatable sc-ion-alert-md"
-          tabindex="0"><span class="alert-button-inner sc-ion-alert-md">Clear</span>
-          <ion-ripple-effect class="sc-ion-alert-md hydrated" role="presentation"></ion-ripple-effect>
-        </button></div>
-    </div>
-  </ion-alert> -->
-
-
-
-
-
   <ion-grid>
-    <!--   <ion-row>
-        <ion-col></ion-col>
-      <ion-col> -->
-    <form style='max-width:500px;' [formGroup]="formGroup" (submit)='onSubmit()'>
-      <ion-row>
-        <ion-col>
-          <!-- <ion-item (click)='openSelect("assetType")' style='--highlight-height:0'>
+    <ion-row>
+      <ion-col offset-md='3' offset-lg='3' offset-xl='3'>
+        <form [formGroup]="formGroup">
+          <ion-row>
+            <ion-col style="max-width: 200px">
+              <!-- <ion-item (click)='openSelect("assetType")' style='--highlight-height:0'>
             <ion-label position="floating">Asset Type</ion-label>
             <ion-input style="--padding-start:0" type='text' formControlName="assetType"></ion-input>
           </ion-item> -->
 
-
-          <ion-item>
-            <ion-label position='floating'>Asset Type</ion-label>
-            <ionic-selectable item-content formControlName='assetType' [items]="assetsTypeMapping" itemValueField="id"
-              itemTextField="name" [canSearch]="true" (onChange)="portChange($event)" [canClear]="true"
-              [isMultiple]="true">
-            </ionic-selectable>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <!-- <ion-item style='--highlight-height:0'>
+              <!-- <ion-icon style='width:28px;height:28px' src='../../assets/icon/eye.svg'></ion-icon> -->
+              <ion-item style="max-width: 200px">
+                <ion-label position='floating'>Asset Type</ion-label>
+                <ionic-selectable item-content formControlName='assetType' [items]="assetsTypeMapping"
+                  itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="portChange($event)"
+                  [canClear]="true" [isMultiple]="true">
+                </ionic-selectable>
+              </ion-item>
+            </ion-col>
+            <ion-col style="max-width: 230px">
+              <!-- <ion-item style='--highlight-height:0'>
             <ion-label position="floating">Manufacture Year (YY)</ion-label>
             <ion-input (keypress)="numberOnly($event)" clearInput formControlName='yearOfManufacture'></ion-input>
           </ion-item> -->
-          <ion-item>
-            <ion-icon slot='end' name="options" (click)='yearOfManufactureFilter()'></ion-icon>
-            <ion-label position='floating' *ngIf='lessThan==="" && moreThan===""'>Manufacture Year</ion-label>
-            <ion-label position='floating' *ngIf='lessThan!=="" && moreThan===""'>M/f Before  {{lessThan}}</ion-label>
-            <ion-label position='floating' *ngIf='lessThan==="" && moreThan!==""'>M/f After  {{moreThan}}</ion-label>
-            <ion-label position='floating' *ngIf='lessThan!=="" && moreThan!==""'>M/f B/w {{lessThan}}-{{moreThan}}</ion-label>
-            <ionic-selectable item-content formControlName='yearOfManufacture' [items]="yearsMapping"
-              itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="yomChange($event)"
-              [canClear]="true" [isMultiple]="true">
-            </ionic-selectable>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item style='--highlight-height:0'>
-            <ion-label position="floating">Date Put Into Use</ion-label>
-            <ion-input (click)='showDateUseCalendar()' type='text' clearInput formControlName='dateUse'></ion-input>
-            <!-- <ion-icon name="create"></ion-icon> -->
-          </ion-item>
-        </ion-col>
-      </ion-row>
+              <ion-item>
+                <ion-icon slot='end' name="options" style="margin-bottom:-20px;margin-top: 0px;
+                margin-left: 8px;" (click)='yearOfManufactureFilter()'>
+                </ion-icon>
+                <ion-label position='floating' *ngIf='lessThan==="" && moreThan===""'>Manufacture Year</ion-label>
+                <ion-label position='floating' *ngIf='lessThan!=="" && moreThan===""'>M/f Before {{lessThan}}
+                </ion-label>
+                <ion-label position='floating' *ngIf='lessThan==="" && moreThan!==""'>M/f After {{moreThan}}</ion-label>
+                <ion-label position='floating' *ngIf='lessThan!=="" && moreThan!==""'>M/f B/w {{lessThan}}-{{moreThan}}
+                </ion-label>
+                <ionic-selectable item-content formControlName='yearOfManufacture' [items]="yearsMapping"
+                  itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="yomChange($event)"
+                  [canClear]="true" [isMultiple]="true">
+                </ionic-selectable>
+              </ion-item>
+            </ion-col>
+            <ion-col>
+              <ion-item style='--highlight-height:0;max-width:200px;'>
+                <ion-icon slot='end' name="options" style="margin-bottom:-20px" (click)='yearOfManufactureFilter()'>
+                </ion-icon>
+                <ion-label position='floating'>Date Put Into Use</ion-label>
+                <ion-input (click)='showDateUseCalendar()' type='text' clearInput formControlName='dateUse'></ion-input>
 
-      <ion-row>
-        <ion-col>
-          <!--           <ion-item text-wrap (click)='openSelect("owner")' style='--highlight-height:0'>
+                <!-- <ion-icon name="create"></ion-icon> -->
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col style='    max-width: 120px;'>
+              <!--           <ion-item text-wrap (click)='openSelect("owner")' style='--highlight-height:0'>
             <ion-label position="floating">Owner</ion-label>
             <ion-input type='text' formControlName='owner'></ion-input>
           </ion-item>
  -->
 
-          <ion-item>
-            <ion-label position='floating'>Owner</ion-label>
-            <ionic-selectable item-content formControlName='owner' [items]="ownersMapping" itemValueField="id"
-              itemTextField="name" [canSearch]="true" (onChange)="portChange($event)" [canClear]="true"
-              [isMultiple]="true">
-            </ionic-selectable>
-          </ion-item>
+              <ion-item>
+                <ion-label position='floating'>Owner</ion-label>
+                <ionic-selectable item-content formControlName='owner' [items]="ownersMapping" itemValueField="id"
+                  itemTextField="name" [canSearch]="true" (onChange)="portChange($event)" [canClear]="true"
+                  [isMultiple]="true">
+                </ionic-selectable>
+              </ion-item>
 
-        </ion-col>
-        <ion-col>
-          <!--           <ion-item text-wrap (click)='openSelect("vehicleType")' style='--highlight-height:0'>
+            </ion-col>
+            <ion-col style='    max-width: 165px;'>
+              <!--           <ion-item text-wrap (click)='openSelect("vehicleType")' style='--highlight-height:0'>
             <ion-label position="floating">Vehicle Type</ion-label>
             <ion-input type='text' formControlName='vehicleType'></ion-input>
           </ion-item> -->
 
-          <ion-item>
-            <ion-label position='floating'>Vehicle Type</ion-label>
-            <ionic-selectable item-content formControlName='vehicleType' [items]="vehiclesTypeMapping"
-              itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="portChange($event)"
-              [canClear]="true" [isMultiple]="true">
-            </ionic-selectable>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item text-wrap style='--highlight-height:0'>
-            <ion-label primary position="floating">Serial Number </ion-label>
-            <ion-input inputmod='numeric' type='text' (keypress)="numberOnly($event)" clearInput
-              formControlName='serialNo'></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
+              <ion-item>
+                <ion-label position='floating'>Vehicle Type</ion-label>
+                <ionic-selectable item-content formControlName='vehicleType' [items]="vehiclesTypeMapping"
+                  itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="portChange($event)"
+                  [canClear]="true" [isMultiple]="true">
+                </ionic-selectable>
+              </ion-item>
+            </ion-col>
+            <ion-col style='    max-width: 145px;'>
+              <ion-item text-wrap style='--highlight-height:0'>
+                <ion-label primary position="floating">Serial Number </ion-label>
+                <ion-input inputmod='numeric' type='text' (keypress)="numberOnly($event)" clearInput
+                  formControlName='serialNo'></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
 
-      <ion-row>
-        <!-- <ion-col> -->
-        <!-- <ion-item>
+          <ion-row>
+            <!-- <ion-col> -->
+            <!-- <ion-item>
             <ion-label position="floating">Date Of Use</ion-label>
             <ion-datetime style='--padding-top:0' formControlName='dateUse' displayFormat="D MMM YYYY"
               [pickerOptions]="customOptions">
             </ion-datetime> 
 </ion-item>-->
 
-        <!-- </ion-col> -->
+            <!-- </ion-col> -->
 
-        <ion-col>
-          <!--           <ion-item (click)='openSelect("vehicleMfcCode")' style='--highlight-height:0'>
+            <ion-col style='max-width: 433px;'>
+              <!--           <ion-item (click)='openSelect("vehicleMfcCode")' style='--highlight-height:0'>
             <ion-label position="floating">Manufacturer Code</ion-label>
             <ion-input type='text' formControlName='vehicleMfcCode'></ion-input>
           </ion-item> -->
 
 
-          <ion-item>
-            <ion-label position='floating'>Manufacturer Code</ion-label>
-            <ionic-selectable item-content formControlName='vehicleMfcCode' [items]="manufacturersCodeMapping"
-              itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="portChange($event)"
-              [canClear]="true" [isMultiple]="true">
-            </ionic-selectable>
+              <ion-item>
+                <ion-label position='floating'>Manufacturer Code</ion-label>
+                <ionic-selectable item-content formControlName='vehicleMfcCode' [items]="manufacturersCodeMapping"
+                  itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="portChange($event)"
+                  [canClear]="true" [isMultiple]="true">
+                </ionic-selectable>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
+          <ion-item lines='none'>
+            <span *ngIf='lessThan==="" && moreThan===""'>
+              <ion-button type='submit' (click)='onSubmit()' [disabled]='!formGroup.valid || isSearching'>Search
+              </ion-button>
+              <ion-button (click)='clearForm()' [disabled]='!formGroup.valid || isSearching'>Reset</ion-button>
+            </span>
+            <span *ngIf='lessThan!=="" || moreThan!==""'>
+              <ion-button type='submit' (click)='onSubmit()' [disabled]=' isSearching'>Search
+              </ion-button>
+              <ion-button (click)='clearForm()' [disabled]='isSearching'>Reset</ion-button>
+            </span>
+            <!--         <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div> -->
+            <span style='color:red' *ngIf='formGroup.controls["serialNo"].invalid'>
+              Serial Number: Max 6 digits allowed.
+            </span>
+            <span style='color:red' *ngIf='formGroup.controls["yearOfManufacture"].invalid'>
+              Manufacture Year Invalid.
+            </span>
+            <span style='color:red' *ngIf='formGroup.controls["dateUse"].invalid'>
+              Invalid Date.
+              <span *ngIf='!formGroup.controls["invalidDateRange"].invalid'>Valid format is YYYY-MM-DD.</span>
+            </span>
+
+            <!-- <ion-icon slot='end' name="information-circle-outline" (click)='showQuerySummary()' *ngIf='formGroup.valid'>
+            </ion-icon> -->
+            <!-- <ion-icon slot='end' name="funnel"></ion-icon> -->
           </ion-item>
-        </ion-col>
-      </ion-row>
-
-      <ion-item lines='none'>
-        <ion-button type='submit' (click)='onSubmit()' [disabled]='!formGroup.valid || isSearching'>Search</ion-button>
-        <ion-button (click)='clearForm()' [disabled]='!formGroup.valid || isSearching'>Reset</ion-button>
-        <!--         <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div> -->
-        <span style='color:red' *ngIf='formGroup.controls["serialNo"].invalid'>
-          Serial Number: Max 6 digits allowed.
-        </span>
-        <span style='color:red' *ngIf='formGroup.controls["yearOfManufacture"].invalid'>
-          Manufacture Year Invalid.
-        </span>
-        <span style='color:red' *ngIf='formGroup.controls["dateUse"].invalid'>
-          Invalid Date.
-          <span *ngIf='!formGroup.controls["invalidDateRange"].invalid'>Valid format is YYYY-MM-DD.</span>
-        </span>
-
-        <ion-icon slot='end' name="information-circle-outline" (click)='showQuerySummary()' *ngIf='formGroup.valid'>
-        </ion-icon>
-        <!-- <ion-icon slot='end' name="funnel"></ion-icon> -->
-      </ion-item>
 
 
 
-    </form>
+        </form>
 
 
 
@@ -246,16 +212,16 @@
 
 
 
-    <!--     <ion-calendar [(ngModel)]="date"
+        <!--     <ion-calendar [(ngModel)]="date"
               (change)="onChange($event)"
               [type]="type"
               [format]="'YYYY-MM-DD'"
               [options]='fromInfinite'
               >
 </ion-calendar> -->
-    <!--     </ion-col>
-    <ion-col></ion-col>
-    </ion-row> -->
+      </ion-col>
+      <!-- <ion-col></ion-col> -->
+    </ion-row>
   </ion-grid>
 
 </ion-content>
