--- a/rfidQbe/src/app/home/home.page.html
+++ b/rfidQbe/src/app/home/home.page.html
@@ -99,7 +99,8 @@
                 <ion-icon slot='end' name="options" style="margin-bottom:-20px" (click)='enableDatePutIntoUseFilter()'>
                 </ion-icon>
                 <ion-label position='floating'>Date Put Into Use</ion-label>
-                <ion-input (click)='showDateUseCalendar("dateUse")' type='text' clearInput formControlName='dateUse'></ion-input>
+                <ion-input (click)='showDateUseCalendar("dateUse")' type='text' clearInput formControlName='dateUse'>
+                </ion-input>
 
                 <!-- <ion-icon name="create"></ion-icon> -->
               </ion-item>
@@ -107,21 +108,35 @@
 
             </ion-col>
           </ion-row>
-          <ion-row *ngIf='showDatePutIntoUseFilter'>
-            <ion-item style='    --highlight-height: 0;
+          <ion-row padding *ngIf='showDatePutIntoUseFilter'>
+            
+              <ion-item style='    --highlight-height: 0;
             max-width: 220px;
             padding-right: 10px;'>
-              <ion-label position='floating'>Date Put Into Use Before</ion-label>
-              <ion-input (click)='showDateUseCalendar("dateUseLessThan")' type='text' clearInput formControlName='dateUseLessThan'>
-              </ion-input>
-              <!-- <ion-icon name="create"></ion-icon> -->
-            </ion-item>
-            <ion-item style='--highlight-height:0;max-width:200px;'>
-              <ion-label position='floating'>Date Put Into Use After</ion-label>
-              <ion-input (click)='showDateUseCalendar("dateUseMoreThan")' type='text' clearInput formControlName='dateUseMoreThan'>
-              </ion-input>
-              <!-- <ion-icon name="create"></ion-icon> -->
-            </ion-item>
+                <ion-label position='floating'>Date Put Into Use Before</ion-label>
+                <ion-input (click)='showDateUseCalendar("dateUseLessThan")' type='text' clearInput
+                  formControlName='dateUseLessThan'>
+                </ion-input>
+                <!-- <ion-icon name="create"></ion-icon> -->
+              </ion-item>
+              <ion-item style='--highlight-height:0;max-width:200px;'>
+                <ion-label position='floating'>Date Put Into Use After</ion-label>
+                <ion-input (click)='showDateUseCalendar("dateUseMoreThan")' type='text' clearInput
+                  formControlName='dateUseMoreThan'>
+                </ion-input>
+                <!-- <ion-icon name="create"></ion-icon> -->
+              </ion-item>
+                            <ion-item style='    --highlight-height: 0;
+            max-width: 220px;
+            padding-right: 10px;'>
+                <ion-label position='floating'>Date Put Into Use Range</ion-label>
+                <ion-input (click)='showDateUseRangeCalendar("dateUseRange")' type='text' clearInput
+                  formControlName='dateUseLessThan'>
+                </ion-input>
+                <!-- <ion-icon name="create"></ion-icon> -->
+              </ion-item>
+            
+
           </ion-row>
 
           <ion-row>
@@ -210,7 +225,8 @@
             <span style='color:red' *ngIf='formGroup.controls["yearOfManufacture"].invalid'>
               Manufacture Year Invalid.
             </span>
-            <span style='color:red' *ngIf='formGroup.controls["dateUse"].invalid'>
+            <span style='color:red'
+              *ngIf='formGroup.controls["dateUse"].invalid ||formGroup.controls["dateUseLessThan"].invalid || formGroup.controls["dateUseMoreThan"].invalid'>
               Invalid Date.
               <span *ngIf='!formGroup.controls["invalidDateRange"].invalid'>Valid format is YYYY-MM-DD.</span>
             </span>
