--- a/rfidQbe/src/app/home/home.page.html
+++ b/rfidQbe/src/app/home/home.page.html
@@ -96,8 +96,11 @@
             </ion-col>
             <ion-col>
               <ion-item style='--highlight-height:0;max-width:200px;'>
-                <ion-icon slot='end' name="options" style="margin-bottom:-20px" (click)='enableDatePutIntoUseFilter()'>
-                </ion-icon>
+<!--                 <ion-icon slot='end' name="options" style="margin-bottom:-20px" (click)='enableDatePutIntoUseFilter()'>
+                </ion-icon> -->
+                <ion-icon slot='end' name="options" style="margin-bottom:-20px" (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")'>
+                  </ion-icon>
+                
                 <ion-label position='floating'>Date Put Into Use</ion-label>
                 <ion-input (click)='showDateUseCalendar("dateUse")' type='text' clearInput formControlName='dateUse'>
                 </ion-input>
@@ -113,14 +116,14 @@
               <ion-item style='    --highlight-height: 0;
             max-width: 220px;
             padding-right: 10px;'>
-                <ion-label position='floating'>Date Put Into Use Before</ion-label>
+                <ion-label position='floating'>Used Before</ion-label>
                 <ion-input (click)='showDateUseCalendar("dateUseLessThan")' type='text' clearInput
                   formControlName='dateUseLessThan'>
                 </ion-input>
                 <!-- <ion-icon name="create"></ion-icon> -->
               </ion-item>
               <ion-item style='--highlight-height:0;max-width:200px;'>
-                <ion-label position='floating'>Date Put Into Use After</ion-label>
+                <ion-label position='floating'>Used After</ion-label>
                 <ion-input (click)='showDateUseCalendar("dateUseMoreThan")' type='text' clearInput
                   formControlName='dateUseMoreThan'>
                 </ion-input>
@@ -130,7 +133,7 @@
             max-width: 220px;
             padding-right: 10px;'>
                 <ion-label position='floating'>Date Put Into Use Range</ion-label>
-                <ion-input (click)='showDateUseRangeCalendar("dateUseRange")' type='text' clearInput
+                <ion-input (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")' type='text' clearInput
                   formControlName='dateUseLessThan'>
                 </ion-input>
                 <!-- <ion-icon name="create"></ion-icon> -->
