--- a/rfidQbe/src/app/modal/modal.page.html
+++ b/rfidQbe/src/app/modal/modal.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-item lines='none'>
-      <ion-title>Query Summary </ion-title>
+      <ion-title>{{title}} </ion-title>
       <ion-icon name='close' (click)="closeModal()"></ion-icon>
     </ion-item>
   </ion-toolbar>
@@ -9,16 +9,52 @@
 
 <ion-content padding>
 
-  <ion-item lines='none'>
-    <ion-label text-wrap>
-      {{value}}
-    </ion-label>
-  </ion-item>
-  <ion-list>
-    <ion-item *ngFor='let item of messageArray'>
-      <ion-label text-wrap>{{item}}</ion-label>
+  <div *ngIf='type==="querySummary"'>
+    <ion-item lines='none'>
+      <ion-label text-wrap>
+        {{value}}
+      </ion-label>
     </ion-item>
-  </ion-list>
+    <ion-list>
+      <ion-item *ngFor='let item of messageArray'>
+        <ion-label text-wrap>{{item}}</ion-label>
+      </ion-item>
+    </ion-list>
+  </div>
+
+  <ion-row padding *ngIf='type==="DateUseFilter"'>
+
+    <ion-item style='    --highlight-height: 0;
+            max-width: 220px;
+            padding-right: 10px;'>
+      <ion-label position='floating'>Used Before</ion-label>
+      <ion-input [(ngModel)]='dateUseLessThan' (click)='openCalendar("dateUseLessThan","Used Before")' type='text' clearInput
+        >
+      </ion-input>
+      <!-- <ion-icon name="create"></ion-icon> -->
+    </ion-item>
+    <ion-item style='--highlight-height:0;max-width:200px;'>
+      <ion-label position='floating'>Used After</ion-label>
+      <ion-input [(ngModel)]='dateUseMoreThan' (click)='openCalendar("dateUseMoreThan","Used After")' type='text' clearInput
+        >
+      </ion-input>
+      <!-- <ion-icon name="create"></ion-icon> -->
+    </ion-item>
+    <ion-item style='    --highlight-height: 0;
+            max-width: 220px;
+            padding-right: 10px;'>
+      <ion-label position='floating'>Date Put Into Use Range</ion-label>
+      <ion-input [(ngModel)]='dateUseRange' (click)='openCalendarRange("dateUseRange","Date Put Into Range")' type='text' clearInput
+        >
+      </ion-input>
+      <!-- <ion-icon name="create"></ion-icon> -->
+    </ion-item>
+
+
+  </ion-row>
+  <ion-item lines='none'>
+    <ion-button (click)='closeModal()'>Ok</ion-button>
+  </ion-item>
 
 
 </ion-content>
