--- a/rfidQbe/src/app/home/home.page.html
+++ b/rfidQbe/src/app/home/home.page.html
@@ -94,51 +94,45 @@
                 </ionic-selectable>
               </ion-item>
             </ion-col>
-            <ion-col>
+<!--             <ion-col>
               <ion-item style='--highlight-height:0;max-width:200px;'>
-<!--                 <ion-icon slot='end' name="options" style="margin-bottom:-20px" (click)='enableDatePutIntoUseFilter()'>
-                </ion-icon> -->
-                <ion-icon slot='end' name="options" style="margin-bottom:-20px" (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")'>
-                  </ion-icon>
-                
+                <ion-icon slot='end' name="options" style="margin-bottom:-20px"
+                  (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")'>
+                </ion-icon>
                 <ion-label position='floating'>Date Put Into Use</ion-label>
                 <ion-input (click)='showDateUseCalendar("dateUse")' type='text' clearInput formControlName='dateUse'>
                 </ion-input>
-
-                <!-- <ion-icon name="create"></ion-icon> -->
               </ion-item>
-
-
-            </ion-col>
+            </ion-col> -->
           </ion-row>
           <ion-row padding *ngIf='showDatePutIntoUseFilter'>
-            
-              <ion-item style='    --highlight-height: 0;
+
+            <ion-item style='    --highlight-height: 0;
             max-width: 220px;
             padding-right: 10px;'>
-                <ion-label position='floating'>Used Before</ion-label>
-                <ion-input (click)='showDateUseCalendar("dateUseLessThan")' type='text' clearInput
-                  formControlName='dateUseLessThan'>
-                </ion-input>
-                <!-- <ion-icon name="create"></ion-icon> -->
-              </ion-item>
-              <ion-item style='--highlight-height:0;max-width:200px;'>
-                <ion-label position='floating'>Used After</ion-label>
-                <ion-input (click)='showDateUseCalendar("dateUseMoreThan")' type='text' clearInput
-                  formControlName='dateUseMoreThan'>
-                </ion-input>
-                <!-- <ion-icon name="create"></ion-icon> -->
-              </ion-item>
-                            <ion-item style='    --highlight-height: 0;
+              <ion-label position='floating'>Used Before</ion-label>
+              <ion-input (click)='showDateUseCalendar("dateUseLessThan")' type='text' clearInput
+                formControlName='dateUseLessThan'>
+              </ion-input>
+              <!-- <ion-icon name="create"></ion-icon> -->
+            </ion-item>
+            <ion-item style='--highlight-height:0;max-width:200px;'>
+              <ion-label position='floating'>Used After</ion-label>
+              <ion-input (click)='showDateUseCalendar("dateUseMoreThan")' type='text' clearInput
+                formControlName='dateUseMoreThan'>
+              </ion-input>
+              <!-- <ion-icon name="create"></ion-icon> -->
+            </ion-item>
+            <ion-item style='    --highlight-height: 0;
             max-width: 220px;
             padding-right: 10px;'>
-                <ion-label position='floating'>Date Put Into Use Range</ion-label>
-                <ion-input (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")' type='text' clearInput
-                  formControlName='dateUseLessThan'>
-                </ion-input>
-                <!-- <ion-icon name="create"></ion-icon> -->
-              </ion-item>
-            
+              <ion-label position='floating'>Date Put Into Use Range</ion-label>
+              <ion-input (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")'
+                type='text' clearInput formControlName='dateUseLessThan'>
+              </ion-input>
+              <!-- <ion-icon name="create"></ion-icon> -->
+            </ion-item>
+
 
           </ion-row>
 
