--- a/rfidQbe/src/app/modal/modal.page.html
+++ b/rfidQbe/src/app/modal/modal.page.html
@@ -10,11 +10,11 @@
 <ion-content padding>
 
   <div *ngIf='type==="querySummary"'>
-    <ion-item lines='none'>
+    <!--     <ion-item lines='none'>
       <ion-label text-wrap>
         {{value}}
       </ion-label>
-    </ion-item>
+    </ion-item> -->
     <ion-list>
       <ion-item *ngFor='let item of messageArray'>
         <ion-label text-wrap>{{item}}</ion-label>
@@ -23,38 +23,39 @@
   </div>
 
   <ion-row padding *ngIf='type==="DateUseFilter"'>
-
-    <ion-item style='    --highlight-height: 0;
+    <ion-col offset-md='3' offset-lg='3' offset-xl='3'>
+      <ion-item style='    --highlight-height: 0;
             max-width: 220px;
             padding-right: 10px;'>
-      <ion-label position='floating'>Used Before</ion-label>
-      <ion-input [(ngModel)]='dateUseLessThan' (click)='openCalendar("dateUseLessThan","Used Before")' type='text' clearInput
-        >
-      </ion-input>
-      <!-- <ion-icon name="create"></ion-icon> -->
-    </ion-item>
-    <ion-item style='--highlight-height:0;max-width:200px;'>
-      <ion-label position='floating'>Used After</ion-label>
-      <ion-input [(ngModel)]='dateUseMoreThan' (click)='openCalendar("dateUseMoreThan","Used After")' type='text' clearInput
-        >
-      </ion-input>
-      <!-- <ion-icon name="create"></ion-icon> -->
-    </ion-item>
-    <ion-item style='    --highlight-height: 0;
-            max-width: 220px;
+        <ion-label position='floating'>Used Before</ion-label>
+        <ion-input [(ngModel)]='dateUseLessThan' (click)='openCalendar("dateUseLessThan","Used Before")' type='text'
+          clearInput>
+        </ion-input>
+        <!-- <ion-icon name="create"></ion-icon> -->
+      </ion-item>
+      <ion-item style='--highlight-height:0;max-width:200px;'>
+        <ion-label position='floating'>Used After</ion-label>
+        <ion-input [(ngModel)]='dateUseMoreThan' (click)='openCalendar("dateUseMoreThan","Used After")' type='text'
+          clearInput>
+        </ion-input>
+        <!-- <ion-icon name="create"></ion-icon> -->
+      </ion-item>
+      <ion-item style='    --highlight-height: 0;
+            max-width: 250px;
             padding-right: 10px;'>
-      <ion-label position='floating'>Date Put Into Use Range</ion-label>
-      <ion-input [(ngModel)]='dateUseRange' (click)='openCalendarRange("dateUseRange","Date Put Into Range")' type='text' clearInput
-        >
-      </ion-input>
-      <!-- <ion-icon name="create"></ion-icon> -->
-    </ion-item>
-
-
+        <ion-label position='floating'>Date Put Into Use Range</ion-label>
+        <ion-input [(ngModel)]='dateUseRange' (click)='openCalendarRange("dateUseRange","Date Put Into Range")'
+          type='text' clearInput>
+        </ion-input>
+        <!-- <ion-icon name="create"></ion-icon> -->
+      </ion-item>
+      <ion-item lines='none'>
+        <ion-button (click)='closeModal()'>Okay</ion-button>
+      </ion-item>
+    </ion-col>
   </ion-row>
-  <ion-item lines='none'>
-    <ion-button (click)='closeModal()'>Ok</ion-button>
-  </ion-item>
+
+
 
 
 </ion-content>
