--- a/rfidQbe/src/app/modal/modal.page.html
+++ b/rfidQbe/src/app/modal/modal.page.html
@@ -24,40 +24,51 @@
 
   <ion-row padding *ngIf='type==="DateUseFilter"'>
     <ion-col offset-md='3' offset-lg='3' offset-xl='3'>
-      <ion-item style='    --highlight-height: 0;
-            max-width: 220px;
+      <ion-row>
+        <!-- <ion-col> -->
+            <ion-item style='--highlight-height:0;max-width:270px;padding-right:10px;'>
+                <ion-label position='floating'>Used After</ion-label>
+                <ion-input [(ngModel)]='dateUseMoreThan' (click)='openCalendar("dateUseMoreThan","Used After")' type='text'>
+                </ion-input>
+                <ion-icon *ngIf='dateUseMoreThan!==""' slot='end' style='margin-bottom:-15px'
+                  (click)='clearDate("dateUseMoreThan")' name='close'></ion-icon>
+              </ion-item>
+          <ion-item style='    --highlight-height: 0;
+            max-width: 270px;
             padding-right: 10px;'>
-        <ion-label position='floating'>Used Before</ion-label>
-        <ion-input [(ngModel)]='dateUseLessThan' (click)='openCalendar("dateUseLessThan","Used Before")' type='text'
-          clearInput>
-        </ion-input>
-        <!-- <ion-icon name="create"></ion-icon> -->
-      </ion-item>
-      <ion-item style='--highlight-height:0;max-width:200px;'>
-        <ion-label position='floating'>Used After</ion-label>
-        <ion-input [(ngModel)]='dateUseMoreThan' (click)='openCalendar("dateUseMoreThan","Used After")' type='text'
-          clearInput>
-        </ion-input>
-        <!-- <ion-icon name="create"></ion-icon> -->
-      </ion-item>
+            <ion-label position='floating'>Used Before</ion-label>
+            <ion-input [(ngModel)]='dateUseLessThan' (click)='openCalendar("dateUseLessThan","Used Before")' type='text'
+              clearInput>
+            </ion-input>
+            <ion-icon *ngIf='dateUseLessThan!==""' slot='end' style='margin-bottom:-15px'
+              (click)='clearDate("dateUseLessThan")' name='close'></ion-icon>
+          </ion-item>
+        <!-- </ion-col> -->
+        <!-- <ion-col> -->
+
+        <!-- </ion-col> -->
+      </ion-row>
       <ion-item style='    --highlight-height: 0;
-            max-width: 250px;
+            max-width: 300px;
             padding-right: 10px;'>
         <ion-label position='floating'>Date Put Into Use Range</ion-label>
         <ion-input [(ngModel)]='dateUseRange' (click)='openCalendarRange("dateUseRange","Date Put Into Range")'
           type='text' clearInput>
         </ion-input>
-        <!-- <ion-icon name="create"></ion-icon> -->
+        <ion-icon *ngIf='dateUseRange!==""' slot='end' style='margin-bottom:-15px' (click)='clearDate("dateUseRange")'
+          name='close'></ion-icon>
       </ion-item>
       <ion-item lines='none'>
-        <ion-button (click)='closeModal()'>Okay</ion-button>
+          <ion-button (click)='closeModal()'
+          [disabled]='(dateUseRange!=="" ||dateUseLessThan!=="" || dateUseMoreThan!=="")'>Close</ion-button>
+        <ion-button (click)='closeModal()'
+          [disabled]='!(dateUseRange!=="" ||dateUseLessThan!=="" || dateUseMoreThan!=="")'>Okay</ion-button>
+          <ion-button (click)='resetValues()'
+          [disabled]='!(dateUseRange!=="" ||dateUseLessThan!=="" || dateUseMoreThan!=="")'>Reset</ion-button>
       </ion-item>
+      
     </ion-col>
   </ion-row>
-
-
-
-
 </ion-content>
 <!-- <ion-footer>
 
